--- a/index.html
+++ b/index.html
@@ -9,25 +9,26 @@
   <body>
     <main>
       <nav>
+        <div class="logo"><span>X</span><span>O</span></div>
         <div class="turn">TURN: X</div>
         <button class="reset">RESET</button>
       </nav>
 
       <section class="game">
-        <button class="box">X</button>
-        <button class="box">O</button>
-        <button class="box">X</button>
-        <button class="box">O</button>
-        <button class="box">X</button>
-        <button class="box">O</button>
-        <button class="box">X</button>
-        <button class="box">O</button>
-        <button class="box">X</button>
+        <button class="box"></button>
+        <button class="box"></button>
+        <button class="box"></button>
+        <button class="box"></button>
+        <button class="box"></button>
+        <button class="box"></button>
+        <button class="box"></button>
+        <button class="box"></button>
+        <button class="box"></button>
       </section>
 
       <footer>
         <div class="player X">
-          X (You)
+          X
           <span class="score">0</span>
         </div>
         <div class="player Draw">
@@ -35,10 +36,11 @@
           <span class="score">0</span>
         </div>
         <div class="player O">
-          O (CPU)
+          O
           <span class="score">0</span>
         </div>
       </footer>
     </main>
+    <script src="script.js"></script>
   </body>
 </html>
