--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tic Tac Toe</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="shortcut icon" href="favicon.png" type="image/png">
   </head>
   <body>
     <main>
@@ -28,7 +29,7 @@
 
       <footer>
         <div class="player X">
-          X
+          X Score
           <span class="score">0</span>
         </div>
         <div class="player Draw">
@@ -36,7 +37,7 @@
           <span class="score">0</span>
         </div>
         <div class="player O">
-          O
+          O Score
           <span class="score">0</span>
         </div>
       </footer>
