change "turn" class to "msg" class

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <main>
       <nav>
         <div class="logo"><span>X</span><span>O</span></div>
-        <div class="turn">TURN: X</div>
+        <div class="msg">Turn: X</div>
         <button class="reset">RESET</button>
       </nav>
 
